# entropy-forge

./: .editorconfig  .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-DESKTOP-UI.md  03-MOBILE-RESPONSIVE.md  04-ANDROID.md  05-FEATURE-PARITY.md  06-TESTING-DEPLOYMENT.md  07-MIGRATION-CHECKLIST.md
Docs/MANIFESTO/: entropy_forge_features.md  entropy_forge_ui_mapping.md
_repo2notebook/: github-com-rvoidex7-entropy-forge.md
examples/: basic_usage.rs  custom_source.rs  quality_check.rs
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: bench_tab.rs  learn_tab.rs  mod.rs  test_tab.rs  use_tab.rs
src/bench/: mod.rs  performance.rs
src/crypto/: cipher.rs  mod.rs
src/entropy/: mock.rs  mod.rs  system.rs
src/learn/: entropy_visual.rs  mod.rs  nist_visual.rs  steps.rs  xor_visual.rs
src/quality/: metrics.rs  mod.rs  nist.rs
src/viz/: app.rs  mod.rs
ui/: .eslintrc.js  esbuild.config.js  index.html  package-lock.json  package.json  tsconfig.json
ui/scripts/: copy-assets.js
ui/styles/: bench-tab.css  learn-tab.css  main.css  responsive.css  test-tab.css
ui/ts/: bench-tab.ts  main.ts  test-tab.ts  use-tab.ts
ui/ts/components/: controls.ts  grid.ts  progress-bar.ts
ui/ts/learn/: entropy.ts  index.ts  nist.ts  xor.ts
