[package]
name = "entropy-forge"
version = "0.1.0"
edition = "2021"
authors = ["rvoidex7"]
license = "MIT"
description = "Pluggable entropy framework with quality testing and visualization"
repository = "https://github.com/rvoidex7/entropy-forge"
keywords = ["cryptography", "entropy", "rng", "visualization", "nist"]
categories = ["cryptography", "visualization"]

[dependencies]
# Crypto
rand = "0.8"
getrandom = "0.2"
sha2 = "0.10"
hex = "0.4"

# Math & Stats
statrs = "0.17"

# GUI (optional)
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", optional = true }

# Utilities
thiserror = "1.0"

[dev-dependencies]
criterion = "0.8"

[features]
default = ["gui"]
gui = ["dep:egui", "dep:eframe"]

[[bin]]
name = "entropy-forge"
path = "src/main.rs"
required-features = ["gui"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "custom_source"
path = "examples/custom_source.rs"

[[example]]
name = "quality_check"
path = "examples/quality_check.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
